testing delete account

--- a/delete-account/firebase.json
+++ b/delete-account/firebase.json
@@ -15,5 +15,9 @@
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
-  ]
+  ],
+  "extensions": {
+    "delete-account": ".",
+    "delete-account-he0d": "."
+  }
 }
