--- a/delete-account/extension.yaml
+++ b/delete-account/extension.yaml
@@ -2,7 +2,6 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 # Identifier for your extension
-# TODO: Replace this with an descriptive name for your extension.
 name: delete-account  
 version: 0.0.1  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
@@ -14,11 +13,10 @@ displayName: Delete firebase account
 description: >-
   Delete the login user's firebase auth account
 
-license: MIT  # https://spdx.org/licenses/
+license: Apache-2.0 # https://spdx.org/licenses/
 
 # Public URL for the source code of your extension.
-# TODO:  Replace this with your GitHub repo.
-sourceUrl: https://github.com/ORG_OR_USER/REPO_NAME
+sourceUrl: https://github.com/thruthesky/firebase-extensions/tree/main/delete-account
 
 # Specify whether a paid-tier billing plan is required to use your extension.
 # Learn more in the docs: https://firebase.google.com/docs/extensions/reference/extension-yaml#billing-required-field
@@ -40,22 +38,9 @@ resources:
   - name: deleteAccount
     type: firebaseextensions.v1beta.function
     description: >-
-      HTTP request-triggered function that responds with a specified greeting message
+      Callable function to be called from your app that will delete the login user's firebaes auth accont
     properties:
       # httpsTrigger is used for an HTTP triggered function.
       httpsTrigger: {}
-      runtime: "nodejs16"
+      runtime: "nodejs18"
 
-# In the `params` field, set up your extension's user-configured parameters.
-# Learn more in the docs:
-# https://firebase.google.com/docs/extensions/reference/extension-yaml#params-field
-params:
-  - param: GREETING
-    label: Greeting for the world
-    description: >-
-      What do you want to say to the world?
-      For example, Hello world? or What's up, world?
-    type: string
-    default: Hello
-    required: true
-    immutable: false
