--- a/delete-account/extension.yaml
+++ b/delete-account/extension.yaml
@@ -3,7 +3,7 @@
 
 # Identifier for your extension
 name: delete-account  
-version: 0.0.4  # Follow semver versioning
+version: 0.0.5  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -36,7 +36,6 @@ billingRequired: true
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#resources-field
 resources:
   - name: deleteAccount
-    entryPoint: deleteAccountEntryPoint
     type: firebaseextensions.v1beta.function
     description: >-
       Callable function to be called from your app that will delete the login user's firebaes auth accont
@@ -44,6 +43,7 @@ resources:
       # httpsTrigger is used for an HTTP triggered function.
       httpsTrigger: {}
       runtime: "nodejs18"
+      entryPoint: deleteAccountEntryPoint5
 
 
 roles:
